--- a/main.html
+++ b/main.html
@@ -8,18 +8,17 @@
 
 <body>
 
-	<ol data-ns-test="shoppingList">
-		<li>Item 1</li>
-		<li>Item 2</li>
-		<li>Item 3</li>
-	</ol>
+<ol>
+  <li data-ns-test="shoppingList">Item 1</li>
+  <li data-ns-test="shoppingList">Item 2</li>
+  <li data-ns-test="shoppingList">Item 3</li>
+</ol>
 
-	<ul data-ns-test='holidayList'>
-		
-		<li>Item 4</li>
-		<li>Item 5</li>
-		<li>Item 6</li>
-	</ul>
+<ul>
+  <li data-ns-test="holidayList">Destination 1</li>
+  <li data-ns-test="holidayList">Destination 2</li>
+  <li data-ns-test="holidayList">Destination 3</li>
+</ul>
 
 	
 	<!-- the entire body must be written by student -->
